--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,29 @@ version: "3.9"
 services:
   web:
     build: .
-    container_name: flowsuite_app
+    container_name: flowsuite_app_financeiro
     volumes:
       - .:/app
     ports:
-      - "8000:8000"
+      - "9000:9000"
     depends_on:
       - db
     env_file:
       - .env
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "9000", "--reload"]
 
   db:
     build:
       context: ./app/drivers/postgresql/docker
       dockerfile: Dockerfile
-    container_name: flowsuite_db
+    container_name: flowsuite__financeiro_db
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "5432:5432"
+      - "5433:5433"
     env_file:
       - .env
     volumes:
